# chunkseg

./: .gitignore  README.md  pyproject.toml
src/chunkseg/: __init__.py  align.py  cli.py  core.py  display.py  evaluate.py  metrics.py  parsers.py  titles.py
